# apertune

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
design/: README.md
scripts/: apertune-product-verifier.sh  collect-ui-evidence.sh  verify.sh
src/: PitchMath.cpp  PitchMath.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TunerUiModel.cpp  TunerUiModel.h  UiFonts.h
tests/: PitchMathTests.cpp
